--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-12132872-4', 'auto');
-      ga('send', 'pageview');
-
-    </script> -->
 </head>
 
     <!-- Intro Header -->
@@ -48,7 +38,7 @@
                     <h1 class="brand-heading">Judit és Pisti</h1>
                     <h1 class="brand-heading">SAVE THE DATE</h1>
                     <p class="intro-text">
-                        Helyszín: <a href="https://goo.gl/maps/x484yqNLe7tPmphw9">Levendulás</a>
+                        Helyszín: <a href="https://goo.gl/maps/x484yqNLe7tPmphw9" target="blank">Levendulás</a>
                     <br />
                         2365 Inárcs, Levendula Major 1-5.
 
