--- a/index.html
+++ b/index.html
@@ -1,75 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Judit és Pisti</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="We're getting married and can't wait to celebrate with you!">
-    <link rel="canonical" href="http://melagabor.wedding/">
-    <link rel="icon" href="/img/favicon.png?v=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Judit és Pisti</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="description" content="We're getting married and can't wait to celebrate with you!">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway&display=swap" rel="stylesheet">
 
-   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="icon" href="/img/favicon.png?v=1.0">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/reset.css">
+        <link rel="stylesheet" href="/css/main.css">
+    </head>
 
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
-    <link href='//fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Cardo:400,700' rel='stylesheet' type='text/css'>
+    <body>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <div class="content">
+            <h1 class="brand-heading">Judit és Pisti</h1>
+            <h1 class="brand-heading">Save the date!</h1>
+            <img src="img/header.jpeg" alt="Judit és Pisti">
+            <p class="intro-text">
+                Helyszín: <a href="https://goo.gl/maps/x484yqNLe7tPmphw9">Levendulás</a>
+                <br />
+                2365 Inárcs, Levendula Major 1-5.
 
-</head>
-
-    <!-- Intro Header -->
-<header class="intro">
-    <div class="intro-body">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-4">
-                    <h1 class="brand-heading">Judit és Pisti</h1>
-                    <h1 class="brand-heading">SAVE THE DATE</h1>
-                    <p class="intro-text">
-                        Helyszín: <a href="https://goo.gl/maps/x484yqNLe7tPmphw9" target="blank">Levendulás</a>
-                    <br />
-                        2365 Inárcs, Levendula Major 1-5.
-
-                    <br />
-                        Időpont: 2023. június 17. (Szombat)
-                    <br />
-                        További információk hamarosan!
-                    <br />
-                    </p>
-		            <p class="rsvp-button"> <a href="https://forms.gle/LFkttoka3wESPRXw5" target="blank">Visszajelzek</a> </p>
-                </div>
-            </div>
+                <br />
+                Időpont: 2023. június 17. (Szombat)
+                <br />
+                További információk hamarosan.
+                <br />
+            </p>
+            <p class="rsvp-button"> <a href="https://forms.gle/LFkttoka3wESPRXw5" target="blank">Visszajelzek</a> </p>
         </div>
-    </div>
-</header>
 
-
-     <!-- jQuery Version 1.11.0 -->
-    <script src="/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="/js/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6rRW9hmltJZvoNLO7dewTmGqZn8LIRFU"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="/js/main.js"></script>
 
     </body>
 </html>
