--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                 <br />
                 Időpont: 2023. június 17. (Szombat)
                 <br />
+                Vendégvárás 16 órától.
+                <br />
                 További információk hamarosan.
                 <br />
             </p>
-            <p class="rsvp-button"> <a href="https://forms.gle/LFkttoka3wESPRXw5" target="blank">Visszajelzek</a> </p>
+            <p class="rsvp-button"> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdpo3geNFH5nXm__rsbAsD2aVj0bf3NQEEAXReZusg7TOvv_A/viewform?usp=sf_link" target="blank">Visszajelzek</a> </p>
         </div>
 
 
