--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                 <br />
                 Vendégvárás 16 órától.
                 <br />
-                További információk hamarosan.
-                <br />
             </p>
+            <p class="rsvp-button"> <a href="./meghivo.pdf#view=Fit" target="blank">Meghívó</a> </p>
+            <br />
+            <br />
             <p class="rsvp-button"> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdpo3geNFH5nXm__rsbAsD2aVj0bf3NQEEAXReZusg7TOvv_A/viewform?usp=sf_link" target="blank">Visszajelzek</a> </p>
         </div>
 
